tests/neg/i7359-e.scala
trait SAMTrait where
  def first(): String
  def wait(a: Long, n: Int): Unit // error
